--- a/src/index.css
+++ b/src/index.css
@@ -3,3 +3,27 @@
     display: flex;
     justify-content: space-around;
 }
+
+.cont-teams{
+
+}
+
+.cont-player{
+    width: 150px;
+    height: 100px;
+    margin: 10px;
+    padding: 5px;
+    border: 1px solid black;
+    display: flex;
+    flex-flow: column;
+    align-items: center;
+    text-align: center;
+}
+
+.cont-player .cont-image{
+
+}
+
+.cont-player .cont-description{
+    font-weight:400;
+}
